--- a/css/index.css
+++ b/css/index.css
@@ -76,3 +76,9 @@ button{
   transform: translate(-100%, 40%);
   margin-top: 15px;
 }
+@media only screen and (max-width: 380px) {
+  button{
+    width: 150px;
+    height: 90px;
+  }
+}
