--- a/css/index.css
+++ b/css/index.css
@@ -14,11 +14,29 @@ button{
   margin-bottom: 10px;
   background-color: #2c4863;
   color: white;
+  border-radius: 15px;
+}
+a{
+  color: white;
+}
+
+#justonce{
+  cursor: pointer;
+}
+
+.sword{
+  position: absolute;
+  background-color: white;
+  border-radius: 15px;
+  margin: 15px;
+  z-index: 2;
+  top: 0;
 }
 
 .remimg{
   position: fixed;
   bottom: 0px;
+  z-index: -1;
 }
 
 .lerem{
@@ -30,11 +48,22 @@ button{
   padding: 15px;
   font-size: 30px;
   text-align: center;
+  background-color: #2c4863;
+  border-radius: 15px;
+  color: white;
+
 }
 
 .home{
+  top: 10px;
   position: fixed;
   right: 30px;
+  background-color: #2c4863;
+  padding: 100px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  border-radius: 15px;
+  color: white;
 }
 
 .external{
@@ -42,12 +71,13 @@ button{
   transform: translate(-50%, 10%);
   position:relative;
   border: 2px solid black;
-  height: 420px;
-  width: 300px;
+  height: 440px;
+  width: 320px;
   background-color: #61779c;
+  border-radius: 12px;
 }
 .image{
-  margin-top: 15px;
+  margin-top: 25px;
   left: 50%;
   transform: translate(-50%);
   position: relative;
@@ -76,9 +106,20 @@ button{
   transform: translate(-100%, 40%);
   margin-top: 15px;
 }
+
+.counter{
+  top: 10px;
+}
 @media only screen and (max-width: 380px) {
   button{
     width: 150px;
     height: 90px;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .home{
+    padding: 10px;
+    top: 10px;
+    right: 20px;
   }
 }
